--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Site settings
 title: 呼延十 # 你的博客名字，可以定义修订
-header-img: "img/green.jpg"
-tagline: "cn"  
-description: "这是我的博客"  # 一句话描述你的博客
+header-img: "img/facebook.jpg"
+tagline: "xixi"  
+description: "千里我独行，不必相送。"  # 一句话描述你的博客
 baseurl: ""
-url: "http://cnfeat"  # 此处填写你的博客地址 
+url: "https://hublanker.github.com/blog/"  # 此处填写你的博客地址 
 
 # About/contact
 owner: 
-  name: "作者名字" # 填写作者信息：名字
-  email: X@gmail.com # 填写作者信息：邮箱
-  bio: "你的博客描述" # 填写作者信息：博客描述
+  name: "呼延十" # 填写作者信息：名字
+  email: huyanshi2580@Gmail.com # 填写作者信息：邮箱
+  bio: "呼延胡言" # 填写作者信息：博客描述
 
 # Data
 gavatar: img/favicon.png # 浏览器地址栏小图标，可自定义更改
@@ -33,7 +33,7 @@ paginate: 8
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone: Asia/Shanghai
+timezone: Asia/Beijing
 
 # Defaults for posts
 defaults:
@@ -43,8 +43,8 @@ defaults:
       type: "posts"
     values:
       layout: "post"
-      author: "你的名字" # 你的名字
-      header-img: "img/green.jpg" # We don't want posts without a header image, that whould mean white on white
+      author: "呼延十" # 你的名字
+      header-img: "img/Facebook.jpg" # We don't want posts without a header image, that whould mean white on white
 
 # Comments 
 comments :
