--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ twitter_username:
 github_username: 
 facebook_username: 
 weibo_username: 
-zhihu_username: 
+zhihu_username: 呼延十
 
 # Build settings  
 # use Github Flavored Markdown !important  
