--- a/_config.yml
+++ b/_config.yml
@@ -13,15 +13,15 @@ owner:
   bio: "呼延胡言" # 填写作者信息：博客描述
 
 # Data
-gavatar: img/Dog.jpg # 浏览器地址栏小图标，可自定义更改
-favicon: img/Dog.jpg # 浏览器地址栏小图标，可自定义更改
+gavatar: img/favicon.png # 浏览器地址栏小图标，可自定义更改
+favicon: img/favicon.png # 浏览器地址栏小图标，可自定义更改
 
 douban_username:  # 你的豆瓣id
 twitter_username: 
 github_username: 
 facebook_username: 
 weibo_username: 
-zhihu_username: 呼延十
+zhihu_username: 
 
 # Build settings  
 # use Github Flavored Markdown !important  
