--- a/_config.yml
+++ b/_config.yml
@@ -61,5 +61,6 @@ google_verify:
 bing_verify:
 
 # Links to include in footer navigation
-paginate:5
+plugins: [jekyll-paginate]
+paginate: 5
 paginate_path: "page:num"
