--- a/_config.yml
+++ b/_config.yml
@@ -54,6 +54,9 @@ highlighter: rouge
 permalink: pretty
 paginate: 8
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
+lsi:         false
+excerpt_separator: "\n\n"
+incremental: false
 
 
 
