--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "帝都低端程序员HuYan的博客"
 keyword: "web,博客,后端"
 url: "https://huyan.couplecoders.tech"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
-port:    4000
+port:    8101
 host:    127.0.0.1
 
 # Publish posts or collection documents with a future date.
@@ -15,10 +15,10 @@ future: true
 
 # SNS settings
 RSS: false
-weibo_username:     huxpro
-zhihu_username:     huxpro
-github_username:    huxpro
-twitter_username:   huxpro
+weibo_username:     hublanker
+zhihu_username:     hublanker
+github_username:    hublanker
+twitter_username:   hublanker
 #facebook_username:  huxpro
 #linkedin_username:  firstname-lastname-idxxxx
 
