--- a/_config.yml
+++ b/_config.yml
@@ -41,9 +41,10 @@ anchorjs: true                          # if you want to customize anchor. check
 # from PR#40, to support local preview for Jekyll 3.0
 # make sure you have this gem installed
 # `$ gem install jekyll-paginate`
-plugins: [jekyll-paginate]
+plugins: [jekyll-paginate,jekyll-mermaid]
 
-
+mermaid:
+  src: '/usr/panfeng/blog/js/mermaid.js'
 
 # Markdown settings
 # replace redcarpet to kramdown,
