--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ ga_domain:
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "呼延十"
-sidebar-avatar: /img/dehua.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/public_code.png      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
