--- a/themes/pure/_config.yml
+++ b/themes/pure/_config.yml
@@ -226,7 +226,7 @@ profile:
   # My Personal Works
   works:
     name:
-      link: http://www.example.com
+      link: http://huyan.couplecoders.tech/
       date: 2016
   # My Personal Projects
   projects:
